turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color) {
	changeCouleurBrose(c)
	BaisseBrosse
	LeveBrosse
}


def step() {
	if (getCouleurSol()==Color.white) {
		setCouleurSol(Color.black)
		droite()
		avance()
		
	} else {
		setCouleurSol(Color.white)
		gauche()
		avance()
	}
}
